# alsa_agc

./: .gitignore  Agc.cpp  Agc.hpp  AlsaHandler.cpp  AlsaHandler.hpp  CMakeLists.txt  Params.hpp  README.md  main.cpp  module.hpp
cpp/: Agc.cpp  Agc.hpp  AlsaHandler.cpp  AlsaHandler.hpp  CMakeLists.txt  README.md  allwinner.txt  build.sh  conanfile.txt  omap_l138.txt
cpp/alsa_module/: 80-alsa_agc.conf  CMakeLists.txt  agc_plugin.cpp  params.hpp
cpp/headers/: AGC.hpp  Constants.hpp  GaussianFilter.hpp
cpp/libagc/: CMakeLists.txt
cpp/libagc/headers/: AGC.hpp  Constants.hpp
cpp/libagc/sources/: AGC.cpp
cpp/sources/: AGC.cpp  GaussianFilter.cpp  main.cpp
cpp/utils/: CMakeLists.txt
protopyth/: AGC.ipynb
